// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Renders the UI snapshot correctly 1`] = `
<div
  className="css-k008qs"
>
  <label
    className="chakra-switch css-u8kezd"
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-label="Test Label"
      checked={false}
      className="chakra-switch__input"
      disabled={false}
      id="inputID"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-switch__track css-14qxnv8"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="chakra-switch__thumb css-0"
      />
    </span>
  </label>
  <div
    className="css-0"
  >
    <label
      className="css-0"
      htmlFor="inputID"
      id="1d339194-fba6-46e5-85db-922870837686"
    >
      Test Label
    </label>
  </div>
</div>
`;

exports[`Toggle Renders the UI snapshot correctly 2`] = `
<div
  className="css-k008qs"
>
  <label
    className="chakra-switch css-u8kezd"
    data-checked=""
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-label="Test Label"
      checked={true}
      className="chakra-switch__input"
      disabled={false}
      id="Toggle-checked"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-switch__track css-14qxnv8"
      data-checked=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="chakra-switch__thumb css-0"
        data-checked=""
      />
    </span>
  </label>
  <div
    className="css-0"
  >
    <label
      className="css-0"
      htmlFor="Toggle-checked"
      id="80fec6e1-e293-431e-8f17-6faf327317d0"
    >
      Test Label
    </label>
  </div>
</div>
`;

exports[`Toggle Renders the UI snapshot correctly 3`] = `
<div
  className="css-k008qs"
>
  <label
    className="chakra-switch css-u8kezd"
    data-invalid=""
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={true}
      aria-label="Test Label"
      checked={false}
      className="chakra-switch__input"
      disabled={false}
      id="Toggle-invalid"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-switch__track css-14qxnv8"
      data-invalid=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="chakra-switch__thumb css-0"
      />
    </span>
  </label>
  <div
    className="css-0"
  >
    <label
      className="css-0"
      htmlFor="Toggle-invalid"
      id="f54e63c0-3c56-4e68-a243-e6df131cecb4"
    >
      Test Label
    </label>
  </div>
</div>
`;

exports[`Toggle Renders the UI snapshot correctly 4`] = `
<div
  className="css-k008qs"
>
  <label
    className="chakra-switch css-u8kezd"
    data-disabled=""
    onClick={[Function]}
  >
    <input
      aria-disabled={true}
      aria-invalid={false}
      aria-label="Test Label"
      checked={false}
      className="chakra-switch__input"
      disabled={true}
      id="Toggle-disabled"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-switch__track css-14qxnv8"
      data-disabled=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="chakra-switch__thumb css-0"
      />
    </span>
  </label>
  <div
    className="css-0"
  >
    <label
      className="css-0"
      htmlFor="Toggle-disabled"
      id="84086e8f-138e-41c1-831a-3c3d8d40b3ac"
    >
      Test Label
    </label>
  </div>
</div>
`;
